fix header alignment

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -52,6 +52,10 @@
   align-items: center;
   gap: 2rem;
 
+  @media (max-width: 755px) {
+    margin-left: auto;
+  }
+
   svg {
     cursor: pointer;
   }
